[gd_scene load_steps=19 format=3 uid="uid://d6vrirhkna1a"]

[ext_resource type="Script" path="res://Scripts/sentrygun.gd" id="1_61r0p"]
[ext_resource type="Script" path="res://laser.gd" id="1_fwny5"]
[ext_resource type="Script" path="res://Scripts/bodypart.gd" id="3_kb1s8"]
[ext_resource type="PackedScene" uid="uid://rif7qlnipanh" path="res://Scenes/effects/muzzleflash.tscn" id="3_kwkni"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0oj7x"]
albedo_color = Color(0.303233, 0.303233, 0.303233, 1)
metallic = 0.44
roughness = 0.9

[sub_resource type="BoxMesh" id="BoxMesh_wrrps"]
material = SubResource("StandardMaterial3D_0oj7x")

[sub_resource type="CylinderMesh" id="CylinderMesh_oo2j3"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3s7sy"]
transparency = 1
albedo_color = Color(0.776471, 0.0941176, 0, 0.631373)
emission_enabled = true
emission = Color(0.933333, 0, 0, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_ib2vb"]
material = SubResource("StandardMaterial3D_3s7sy")
top_radius = 0.02
bottom_radius = 0.02
height = 0.001

[sub_resource type="BoxShape3D" id="BoxShape3D_yu1oo"]

[sub_resource type="BoxShape3D" id="BoxShape3D_ee3ax"]
size = Vector3(0.427734, 0.475098, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_dvvl6"]
albedo_color = Color(0.342864, 8.94991e-05, 0.348389, 1)

[sub_resource type="BoxMesh" id="BoxMesh_mhsk1"]
material = SubResource("StandardMaterial3D_dvvl6")
size = Vector3(0.1, 1, 0.1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_csxa4"]
albedo_color = Color(0.294118, 0.490196, 0.290196, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ivk74"]
material = SubResource("StandardMaterial3D_csxa4")
radius = 0.4
height = 0.1

[sub_resource type="CylinderShape3D" id="CylinderShape3D_ebyjp"]
height = 0.1
radius = 0.4

[sub_resource type="CylinderMesh" id="CylinderMesh_7cl2f"]

[sub_resource type="BoxShape3D" id="BoxShape3D_4idj3"]
size = Vector3(0.492584, 1.14917, 1.70819)

[node name="sentrygun" type="CharacterBody3D"]
collision_layer = 4
script = ExtResource("1_61r0p")

[node name="gun" type="MeshInstance3D" parent="."]
transform = Transform3D(0.514957, 0, 0, 0, 0.433582, 0, 0, 0, 1, 0, 0.472139, 0)
mesh = SubResource("BoxMesh_wrrps")

[node name="barrel" type="MeshInstance3D" parent="gun"]
transform = Transform3D(0.275977, 0, 0, 0, -2.083e-08, -0.259838, 0, 0.476535, -1.13579e-08, -0.293106, -0.288665, 0.822986)
mesh = SubResource("CylinderMesh_oo2j3")

[node name="RayCast3D" type="RayCast3D" parent="gun/barrel"]
transform = Transform3D(4.581, 0, 0, 0, -100, 4.23126e-07, 0, -8.74228e-06, -4.84, 0.143, 1.077, 0)
collision_mask = 11
script = ExtResource("1_fwny5")

[node name="laser" type="MeshInstance3D" parent="gun/barrel/RayCast3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 1.13687e-13, 1, 0, 0, 0)
visible = false
mesh = SubResource("CylinderMesh_ib2vb")

[node name="muzzleflash" parent="gun/barrel" instance=ExtResource("3_kwkni")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 7.10543e-15, 1, 0, 1.20301, 0.535001)

[node name="PhysicalBone3D" type="PhysicalBone3D" parent="gun" groups=["has_hp"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_kb1s8")

[node name="CollisionShape3D" type="CollisionShape3D" parent="gun/PhysicalBone3D"]
shape = SubResource("BoxShape3D_yu1oo")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="gun/PhysicalBone3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.286133, -0.262451, 0.835489)
shape = SubResource("BoxShape3D_ee3ax")

[node name="MeshInstance3D" type="MeshInstance3D" parent="gun"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.294014, 0.973624, -0.390654)
mesh = SubResource("BoxMesh_mhsk1")

[node name="MeshInstance3D" type="MeshInstance3D" parent="gun/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 0.771058, -0.636765, 0, 0.636765, 0.771058, 0, 0.556334, 0)
mesh = SubResource("SphereMesh_ivk74")

[node name="PhysicalBone3D" type="PhysicalBone3D" parent="gun/MeshInstance3D/MeshInstance3D" groups=["has_hp"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_kb1s8")
damage_multiplier = 3

[node name="CollisionShape3D" type="CollisionShape3D" parent="gun/MeshInstance3D/MeshInstance3D/PhysicalBone3D"]
shape = SubResource("CylinderShape3D_ebyjp")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(0.0984808, -0.0868241, 0, 0.0173648, 0.492404, 0, 0, 0, 0.1, 0.14436, -0.140895, 0)
mesh = SubResource("CylinderMesh_7cl2f")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.0569836, 0.0502387, -0.0815593, 0.0173648, 0.492404, -2.74226e-10, 0.0803202, -0.0708131, -0.0578627, -0.0708166, -0.132665, 0.179434)
mesh = SubResource("CylinderMesh_7cl2f")
skeleton = NodePath("../Area3D/CollisionShape3D")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="."]
transform = Transform3D(-0.0948391, 0.0836134, 0.0269424, 0.0173648, 0.492404, -2.36726e-10, -0.0265331, 0.0233925, -0.0963021, -0.191345, -0.132665, -0.0353884)
mesh = SubResource("CylinderMesh_7cl2f")
skeleton = NodePath("../Area3D/CollisionShape3D")

[node name="between_shots" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00904846, 0.00823009, 0.424324)
shape = SubResource("BoxShape3D_4idj3")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00904846, 0.00823009, 0.424324)
shape = SubResource("BoxShape3D_4idj3")

[connection signal="bodypart_hit" from="gun/PhysicalBone3D" to="." method="_on_physical_bone_3d_bodypart_hit"]
[connection signal="bodypart_hit" from="gun/MeshInstance3D/MeshInstance3D/PhysicalBone3D" to="." method="_on_physical_bone_3d_bodypart_hit"]
[connection signal="timeout" from="between_shots" to="." method="_on_timer_timeout"]
